Finish template for the report with the sympy

--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -56,4 +56,12 @@ Access the GitHub link to our code here: \url{https://github.com/the-raspberry-p
 Where A, B, C and D are column vectors that form the Jacobian when arranged like (formatted to save space):
 \[\left[\begin{matrix} A & B & C & D \end{matrix}\right]\]
 
+\textit{\\PRESENT THREE PLOTS COMPARING THE X,Y,Z POSITION OF THE ROBOT END-EFFECTOR WITH THE X,Y,Z POSITION OF THE TARGET FOR 10 SECONDS.}
+
+\section{Final Task}
+\setcounter{subsection}{1}
+\subsection{Null-space Control}
+
+\textit{\\DISCUSS ALGORITHM AND HOW IT IS DIFFERENT FROM PREVIOUS CONTROLLER. THREE PLOTS COMPARING THE POSITION OF THE ROBOT END-EFFECTOR WITH THE POSITION OF THE SPHERE AND THE POSITION OF THE BOX.}
+
 \end{document}
