Add graphs for 3.2

--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -86,7 +86,14 @@ Access the GitHub link to our code here: \url{https://github.com/the-raspberry-p
 Where A, B, C and D are column vectors that form the Jacobian when arranged like (formatted to save space):
 \[\left[\begin{matrix} A & B & C & D \end{matrix}\right]\]
 
-\textit{\\PRESENT THREE PLOTS COMPARING THE X,Y,Z POSITION OF THE ROBOT END-EFFECTOR WITH THE X,Y,Z POSITION OF THE TARGET FOR 10 SECONDS.}
+\begin{center}
+    \begin{tabular}{ll}
+        \includegraphics[width=0.4\textwidth]{images/3.2x.png}
+        &
+        \includegraphics[width=0.4\textwidth]{images/3.2y.png}
+    \end{tabular}
+    \includegraphics[width=0.4\textwidth]{images/3.2z.png}
+\end{center}
 
 \section{Final Task}
 \setcounter{subsection}{1}
