--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -47,6 +47,9 @@ Access the GitHub link to our code here: \url{https://github.com/the-raspberry-p
 \begin{center}
     \[\left[\begin{matrix}3 s{\left(\theta_{1} \right)} s{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{1} \right)} s{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} + 3 s{\left(\theta_{1} \right)} s{\left(\theta_{4} \right)} c{\left(\theta_{2} \right)} + 3 s{\left(\theta_{3} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{3} \right)} c{\left(\theta_{1} \right)}\\3 s{\left(\theta_{1} \right)} s{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{1} \right)} s{\left(\theta_{3} \right)} - 3 s{\left(\theta_{2} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} - 3.5 s{\left(\theta_{2} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{3} \right)} - 3 s{\left(\theta_{4} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{2} \right)}\\- 3 s{\left(\theta_{2} \right)} s{\left(\theta_{4} \right)} + 3 c{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 c{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} + 2.5\end{matrix}\right]\]
 
+    where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$
+    \vspace{4mm}
+
     \begin{tabular}{|c|c|c|}
         \hline
         Joint Angle & Estimated via FK & Estimated via Images \\
@@ -83,8 +86,8 @@ Access the GitHub link to our code here: \url{https://github.com/the-raspberry-p
     \textbf{$D =$}
     \[\left[\begin{matrix}- 3 s{\left(\theta_{1} \right)} s{\left(\theta_{2} \right)} s{\left(\theta_{4} \right)} c{\left(\theta_{3} \right)} + 3 s{\left(\theta_{1} \right)} c{\left(\theta_{2} \right)} c{\left(\theta_{4} \right)} - 3 s{\left(\theta_{3} \right)} s{\left(\theta_{4} \right)} c{\left(\theta_{1} \right)}\\- 3 s{\left(\theta_{1} \right)} s{\left(\theta_{3} \right)} s{\left(\theta_{4} \right)} + 3 s{\left(\theta_{2} \right)} s{\left(\theta_{4} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{3} \right)} - 3 c{\left(\theta_{1} \right)} c{\left(\theta_{2} \right)} c{\left(\theta_{4} \right)}\\- 3 s{\left(\theta_{2} \right)} c{\left(\theta_{4} \right)} - 3 s{\left(\theta_{4} \right)} c{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)}\end{matrix}\right]\]
 \end{center}
-Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D are column vectors that form the Jacobian when arranged like (formatted to save space):
-\[\left[\begin{matrix} A & B & C & D \end{matrix}\right]\]
+Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D are column vectors that form the Jacobian \(J\) when arranged like (formatted to save space):
+\[J = \left[\begin{matrix} A & B & C & D \end{matrix}\right]\]
 
 \begin{center}
     \begin{tabular}{ll}
@@ -99,8 +102,6 @@ Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D 
 \setcounter{subsection}{1}
 \subsection{Null-space Control}
 
-\textit{\\DISCUSS ALGORITHM AND HOW IT IS DIFFERENT FROM PREVIOUS CONTROLLER.}
-
 \begin{center}
     \begin{tabular}{ll}
         \includegraphics[width=0.4\textwidth]{images/nullspace_x.png}
@@ -109,5 +110,11 @@ Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D 
         \includegraphics[width=0.4\textwidth]{images/nullspace_z.png} & \includegraphics[height=0.18\textwidth]{images/nullspace_pic.png}
     \end{tabular}
 \end{center}
+
+The previous closed-loop controller attempted to move the robot end effector to track the spherical target as closely as possible. This null-space controller is quite similar in that it also attempts to track the spherical target, but it also has a secondary goal of attempting to avoid hitting the cube target as far as is possible without compromising the original goal of tracking the spherical target.
+
+Our robot is a redundant system: it has more DOF than is needed to complete the task of tracking the sphere. This is because both joint 2 and joint 4 rotate around the \(x\) axis, meaning we can achieve the same end effector position using two different sets of angles for these joints (at least for the task to position the end effector close to the sphere, not quite redundant if we would like to move the end effector to more extreme positions). In other words, it is possible to accomplish our primary goal of tracking the spherical target in multiple ways.
+
+Using this knowledge, we can send also control signals to achieve our secondary goal of avoiding the cube target without affecting the performance of our primary goal. The way this works is by 
 
 \end{document}
