Finish null-space control writing

--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -119,10 +119,16 @@ Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D 
     \end{tabular}
 \end{center}
 
-The previous closed-loop controller attempted to move the robot end effector to track the spherical target as closely as possible. This null-space controller is quite similar in that it also attempts to track the spherical target, but it also has a secondary goal of attempting to avoid hitting the cube target as far as is possible without compromising the original goal of tracking the spherical target.
+The previous closed-loop controller attempted to move the robot end effector to track the spherical target as closely as possible. This null-space controller is quite similar in that it also attempts to track the spherical target, but it also has a secondary goal of attempting to avoid hitting the cube target as much as possible without compromising the original goal of tracking the spherical target.
 
-Our robot is a redundant system: it has more DOF than is needed to complete the task of tracking the sphere. This is because both joint 2 and joint 4 rotate around the \(x\) axis, meaning we can achieve the same end effector position using two different sets of angles for these joints (at least for the task to position the end effector close to the sphere, not quite redundant if we would like to move the end effector to more extreme positions). In other words, it is possible to accomplish our primary goal of tracking the spherical target in multiple ways.
+Our robot is a redundant system: it has more DOF than is needed to complete the task of tracking the sphere. This is because both joint 2 and joint 4 rotate around the \(x\) axis, meaning we can achieve the same end effector position using two different sets of angles for these joints (at least for the task to position the end effector close to the sphere, not quite redundant if we would like to move the end effector to more extreme positions). In other words, it is possible to accomplish our primary goal of tracking the spherical target with multiple joint configurations.
 
-Using this knowledge, we can send also control signals to achieve our secondary goal of avoiding the cube target without affecting the performance of our primary goal. The way this works is by 
+Using this knowledge, we can also send control signals to achieve our secondary goal of avoiding the cube target without affecting the performance of our primary goal. This is done by creating a secondary controller for our secondary goal, that operates in the null space of the primary controller for our primary goal. The final control signal sent to the robot is the sum of the control signal from the primary controller, and this filtered version of the control signal from the secondary controller. In general, this is a technique that can be applied with further controllers as well, but in this case we only have two.
+
+Our final control signal \(\pmb{\tau}\) is defined as such: \[\pmb{\tau} = \pmb{\tau_1} + N(\pmb{q})\pmb{\tau_2}\] where \(\pmb{\tau_i}\) represents the control signal from the controller for the \(i\)th priority goal.
+
+\(N(\pmb{q})\) is the null space projector that projects a given vector into the null space of the primary goal. \(N(\pmb{q})\) is defined as follows: \[N(\pmb{q}) = I - J(\pmb{q}) \bar{J}(\pmb{q})\] where \(\bar{J}\) is the pseudo-inverse of the Jacobian. This means that the control signal \(\pmb{\tau_2}\) from our seconday controller will be subtracted from itself everywhere that affects the primary operational space movement, and is left to apply any control signal that is in the null space of the primary controller.
+
+The controller for our seconday goal is responsible for ensuring the robot stays as far from the cube target as possible. This is done by attempting to maximize the distance between joint 4 (green joint) and the cube target. The distance from joint 4 is maximized as this is the joint that can be moved in three dimensional space without affecting the end effector position, due to the redundancy of our robot. As explained earlier, the control signal from this controller for our seconday goal is then projected into the null space of the primary controller, meaning any control signal left after this projection does not affect our primary goal. An example of this effect can be seen in the screenshot of our robot above, where the end effector is tracking the sphere as closely as it can, but joint 4 is positioned to be as far away from the cube target as possible.
 
 \end{document}
