Revisions of the null space description

--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -130,11 +130,11 @@ Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$ and A, B, C, D 
     \end{tabular}
 \end{center}
 
-The previous closed-loop controller attempted to move the robot end effector to track the spherical target as closely as possible. This null-space controller is quite similar in that it also attempts to track the spherical target, but it also has a secondary goal of attempting to avoid hitting the cube target as much as possible without compromising the original goal of tracking the spherical target.
+The previous closed-loop controller attempted to move the robot end effector to track the spherical target as closely as possible. This null-space controller is similar in that it also attempts to track the spherical target, but has a secondary goal of attempting to avoid hitting the cube target as much as possible without compromising the original goal of tracking the spherical target.
 
-Our robot is a redundant system: it has more DOF than is needed to complete the task of tracking the sphere. This is because both joint 2 and joint 4 rotate around the \(x\) axis, meaning we can achieve the same end effector position using two different sets of angles for these joints (at least for the task to position the end effector close to the sphere, not quite redundant if we would like to move the end effector to more extreme positions). In other words, it is possible to accomplish our primary goal of tracking the spherical target with multiple joint configurations.
+Our robot is a redundant system: it has more DOF than is needed to complete the task of tracking the sphere. This is because both joint 2 and joint 4 rotate around the \(x\) axis, meaning we can achieve the same end effector position using two different sets of angles for these joints (at least for the task of positioning the end effector close to the sphere - the robot may not be redundant in other tasks such as moving to extreme positions). In other words, it is possible to accomplish our primary goal of tracking the spherical target with multiple joint configurations.
 
-Using this knowledge, we can also send control signals to achieve our secondary goal of avoiding the cube target without affecting the performance of our primary goal. This is done by creating a secondary controller for our secondary goal, that operates in the null space of the primary controller for our primary goal. The final control signal sent to the robot is the sum of the control signal from the primary controller, and this filtered version of the control signal from the secondary controller. In general, this is a technique that can be applied with further controllers as well, but in this case we only have two.
+Using this knowledge, we can also send control signals to achieve our secondary goal of avoiding the cube target without affecting the performance of our primary goal. This is done by creating a secondary controller for our secondary goal, that operates in the null space of the primary controller for our primary goal. The final control signal sent to the robot is the sum of the control signal from the primary controller, and a filtered version of the control signal from the secondary controller. In general, this is a technique that can be applied with further controllers as well, but in this case we only have two.
 
 Our final control signal \(\pmb{\tau}\) is defined as such: \[\pmb{\tau} = \pmb{\tau_1} + N(\pmb{q})\pmb{\tau_2}\] where \(\pmb{\tau_i}\) represents the control signal from the controller for the \(i\)th priority goal.
 
