Add DH parameters

--- a/report/s1823424_s1759126.tex
+++ b/report/s1823424_s1759126.tex
@@ -61,9 +61,19 @@ There are a few sources of error in our measurements. Most notably, occasionally
 \section{Robot Control}
 \subsection{Forward Kinematics}
 
-Insert table of DH params?
-
 \begin{center}
+    DH parameters
+
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+        Joint $i$ & $\theta$ & $\alpha$ & $r$ & $d$ \\ \hline
+        1 & $\theta_1 + \pi/2$ & $\pi/2$ & 0 & 2.5 \\
+        2 & $\theta_2 + \pi/2$ & $\pi/2$ & 0 & 0 \\
+        3 & $\theta_3$ & $-\pi/2$ & 3.5 & 0 \\
+        4 & $\theta_4$ & 0 & 3 & 0 \\
+        \hline
+    \end{tabular}
+
     \[K(q)=\left[\begin{matrix}3 s{\left(\theta_{1} \right)} s{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{1} \right)} s{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} + 3 s{\left(\theta_{1} \right)} s{\left(\theta_{4} \right)} c{\left(\theta_{2} \right)} + 3 s{\left(\theta_{3} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{3} \right)} c{\left(\theta_{1} \right)}\\3 s{\left(\theta_{1} \right)} s{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 s{\left(\theta_{1} \right)} s{\left(\theta_{3} \right)} - 3 s{\left(\theta_{2} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} - 3.5 s{\left(\theta_{2} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{3} \right)} - 3 s{\left(\theta_{4} \right)} c{\left(\theta_{1} \right)} c{\left(\theta_{2} \right)}\\- 3 s{\left(\theta_{2} \right)} s{\left(\theta_{4} \right)} + 3 c{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} c{\left(\theta_{4} \right)} + 3.5 c{\left(\theta_{2} \right)} c{\left(\theta_{3} \right)} + 2.5\end{matrix}\right]\]
 
     Where $c(\theta_i)=\cos(\theta_i)$, $s(\theta_i)=\sin(\theta_i)$
